змінені кнопки; Форма 025-6/о: додано поле IllSheetCode, вираховуються поля VisitDatesHospital, CountVisitsHospital ... з Записів

--- a/docnote/App.xaml
+++ b/docnote/App.xaml
@@ -23,6 +23,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedTabControl.xaml" />
 
                 <!--<ResourceDictionary Source="pack://application:,,,/MahApps.Metro.Resources;component/Icons.xaml" />-->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro.IconPacks.FontAwesome;component/Themes/PackIconFontAwesome.xaml" />
 
                 <ResourceDictionary>
                     <!--Global View Model Locator-->
